name:                massiv-simd
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/massiv-simd#readme>
homepage:            https://github.com/lehins/massiv-simd
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2019 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Massiv.Array.SIMD.Double
                     , Data.Massiv.Array.SIMD.Internal

  other-modules:
  build-depends:       base            >= 4.8 && < 5
                     , deepseq
                     , massiv >= 0.3.6
                     , primitive
                     , unliftio-core
                     , vector

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  cc-options:          -Wall -msse4.1
  c-sources:           cbits/m128d.c


executable massiv-simd
  main-is: Main.hs
  other-modules:
      Paths_massiv_simd
  hs-source-dirs:     app
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -O2
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N
  build-depends:      base
                    , massiv
                    , massiv-simd
                    , hspec
                    , QuickCheck
  default-language: Haskell2010


test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Data.Massiv.Array.SIMD.DoubleSpec
                    , Spec
  build-depends:      base             >= 4.8 && < 5
                    , massiv
                    , massiv-simd
                    , hspec
                    , QuickCheck
                    , vector

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N2

source-repository head
  type:     git
  location: https://github.com/lehins/massiv-simd
