name:                massiv-simd
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/massiv-simd#readme>
homepage:            https://github.com/lehins/massiv-simd
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2019 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Massiv.Array.ForeignArray
                     , Data.Massiv.Array.SIMD.Double
                     , Data.Massiv.Array.SIMD
                     , Data.Massiv.Array.SIMD.Internal

  other-modules:       Data.Massiv.Array.ForeignArray.Internal
                     , Data.Massiv.Array.SIMD.Double.M128d
                     , Data.Massiv.Array.SIMD.Double.M256d
  build-depends:       base >= 4.9 && < 5
                     , deepseq
                     , massiv >= 0.3.6
                     , primitive
                     , scheduler >= 1.4.0
                     , unliftio-core
                     , vector

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -fno-warn-orphans
  cc-options:          -Wall
                       -mavx
  includes:            cbits/m128d.h
  c-sources:           cbits/massiv.c
                     , cbits/m128d.c
                     , cbits/m256d.c


executable massiv-simd
  main-is: Main.hs
  other-modules:      Paths_massiv_simd
  hs-source-dirs:     app
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -O2
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N
  build-depends:      base
                    , massiv
                    , massiv-simd
  default-language: Haskell2010


test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Data.Massiv.Array.SIMD.DoubleSpec
                    , Spec
  build-depends:      base
                    , massiv
                    , massiv-simd
                    , massiv-test
                    , hspec
                    , QuickCheck
                    , vector

  default-language:   Haskell2010
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N2

source-repository head
  type:     git
  location: https://github.com/lehins/massiv-simd
